added AppoSwift project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,16 @@
 {
 	"cSpell.words": [
+		"Appo",
+		"apposwift",
 		"chonburi",
 		"clsx",
 		"Crafters",
+		"fiverr",
 		"godaddy",
+		"headlessui",
 		"nextjs",
 		"Ozorji",
+		"shadcn",
 		"swiperjs"
 	],
 	"workbench.colorCustomizations": {
